# lamdams

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_compile.py  run_experiment.py  test_lowering.py  test_sa_mapping.py  test_scaling.py
circuits/: fetch_benchmarks.py  generate_benchmarks.py
experiment_circuits/: gf2_16_mult.qasm  rand_100q_10k.qasm
experiments/: build_figures.py  count_pbc_rotations.py  demo_greedy_critical_scheduling.py  demo_ring_sa_vs_random.py  finalize_sa_v2_tuning.py  gen_fig3.py  gen_fig_families.py  gen_fig_scaling.py  gen_fig_sensitivity.py  gen_table1.py  gf_scaling.py  plot_sa_v2_mapping_panel.py  quick_family_scaling.py  random_scaling.py  random_sensitivity.py  run_experiment.py  sc_baseline.py  sensitivity_analysis.py  sensitivity_analysis_v2.py  test_cpsat_infeasible.py  test_sa_v2_cpsat.py
lamdams.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
results/: fig_3_depth.csv  trace.jsonl
runs/: Adder16_random_cpsat_seed42.json  Adder16_random_greedy_critical_seed42.json  Adder16_random_sequential_seed42.json  Adder16_sa_cpsat_seed42.json  Adder16_sa_greedy_critical_seed42.json  Adder32_random_cpsat_seed42.json  Adder32_random_greedy_critical_seed42.json  Adder32_random_sequential_seed42.json  Adder32_sa_cpsat_seed42.json  Adder32_sa_greedy_critical_seed42.json  Adder64_random_cpsat_seed42.json  Adder64_random_greedy_critical_seed42.json  Adder64_random_sequential_seed42.json  Adder64_sa_cpsat_seed42.json  Adder64_sa_greedy_critical_seed42.json  Adder8_random_cpsat_seed42.json  Adder8_sa_cpsat_seed42.json  (+37 more)
(+2586 files in other folders)
